--- a/view/index.html
+++ b/view/index.html
@@ -2,8 +2,9 @@
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+		<link rel='icon' type='image/png' href='/icone' />
         <meta name='viewport' content='width=device-width' />
-        <title>Catálogo de Mídias</title>
+        <title>Central de Mídias</title>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
@@ -11,7 +12,7 @@
     <body>
         <nav class="navbar navbar-inverse">
             <div class="container-fluid">
-              <div class="navbar-header">
+              <div class="navbar-header" id='navbar_head'>
                 <a class="navbar-brand" href="#">Arquivos</a>
               </div>
               <ul class="nav navbar-nav">
