--- a/view/index.html
+++ b/view/index.html
@@ -22,7 +22,7 @@
 					<span class="caret"></span></a>
 					<ul class="dropdown-menu" id="tipos"></ul>
 				</li>
-        <li><a href="#" onclick="adicionar()" class='config'>Adicionar arquivo</a></li>
+        <li><a href="#" onclick="adicionar()" class='config'>Adicionar arquivos</a></li>
         <li class="dropdown config">
 					<a class="dropdown-toggle" data-toggle="dropdown" href="#">Code
 					<span class="caret"></span></a>
