--- a/view/enviar_auth.html
+++ b/view/enviar_auth.html
@@ -24,7 +24,7 @@
 				<label for="Senha">Senha:</label>
 				<input type="password" class="form-control" id="Senha">
 			</div>
-			<button type="button" class="btn btn-primary btn-block" onclick='enviar()'>Ativar Chave</button>
+			<button type="button" class="btn btn-primary btn-block" onclick='enviar()'>Usar Chave</button>
 			<button type="button" class="btn btn-default btn-block" onclick='cancel()'>Cancelar</button>
 	  </div>
 	  <div id ='loading' style='display: none'>
