--- a/view/index.html
+++ b/view/index.html
@@ -52,7 +52,7 @@
 				<input type='text' id='pesq' placeholder='Digite o nome do arquivo' class='form-control'  />
 				</form>
 			</div>
-		              
+		    <div style="max-height: 500px;margin-top: 15px; overflow: auto;">     
             <table class="table table-striped">
               <thead>
                 <tr>
@@ -66,6 +66,7 @@
               </tbody>
             </table>
           </div>
+        </div>
 		  <div class='container' id='update' style='display: none'>
 				<div class="form-group">
 					<label for="nome_arquivo">Nome:</label>
