--- a/view/index.html
+++ b/view/index.html
@@ -13,9 +13,9 @@
         <nav class="navbar navbar-inverse">
             <div class="container-fluid">
               <div class="navbar-header" id='navbar_head'>
-                <a class="navbar-brand" href="#">Arquivos</a>
+                <a class="navbar-brand" href="#" onclick="menu()">Menu</a>
               </div>
-              <ul class="nav navbar-nav">
+              <ul class="nav navbar-nav" id="menu">
                 <li class="active"><a href="#" onclick="todos()">Procurar</a></li>
 				<li class="dropdown">
 					<a class="dropdown-toggle" data-toggle="dropdown" href="#">Tipos
