--- a/view/index.html
+++ b/view/index.html
@@ -22,13 +22,13 @@
 					<span class="caret"></span></a>
 					<ul class="dropdown-menu" id="tipos"></ul>
 				</li>
-        <li><a href="#" onclick="adicionar()" class='config'>Adicionar arquivos</a></li>
+        <li><a href="#" onclick="adicionar();" class='config'>Adicionar arquivos</a></li>
         <li class="dropdown config">
 					<a class="dropdown-toggle" data-toggle="dropdown" href="#">Code
 					<span class="caret"></span></a>
 					<ul class="dropdown-menu">
-            <li><a href="#" onclick="OpenWindow('http://localhost:3000/qr')" class='config'>Link</a></li>
-            <li><a href="#" onclick="OpenWindow('http://localhost:3000/receber')" class='config'>Receber Arquivos</a></li>
+            <li><a href="#" onclick="OpenWindow('http://localhost:3000/qr'); menu()" class='config'>Link</a></li>
+            <li><a href="#" onclick="OpenWindow('http://localhost:3000/receber'); menu()" class='config'>Receber Arquivos</a></li>
           </ul>
 				</li>
 		<li class="dropdown">
@@ -80,6 +80,7 @@
 				<button type="button" class="btn btn-default btn-block" onclick='cancelar()'>Cancelar</button>
 		  </div>
     </body>
+	<script type="text/javascript" src="/socket.io/socket.io.js"></script>
     <script src='/script' chartset='UTF-8'></script>
 	
 </html>
