--- a/view/index.html
+++ b/view/index.html
@@ -10,7 +10,7 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     </head>
     <body>
-        <nav class="navbar navbar-inverse">
+        <nav class="navbar navbar-inverse" style="position: fixed; width: 100%; z-index:1">
             <div class="container-fluid">
               <div class="navbar-header" id='navbar_head'>
                 <a class="navbar-brand" href="#" onclick="menu()">Menu</a>
@@ -43,16 +43,17 @@
               </ul>
             </div>
           </nav>
+          <div style="height:50px; width: 100%"></div>
           <div class="container" id='main'>
             
             <h2 id='Lista-titulo' align='center'></h2>
-            <div id='musica' align='center'></div>
+            
             <div id='pesquisa'>
 				<form onsubmit='pesquisa()' id='search' align='center'>
 				<input type='text' id='pesq' placeholder='Digite o nome do arquivo' class='form-control'  />
 				</form>
 			</div>
-		    <div style="max-height: 80vh; margin-top: 15px; margin-bottom:20px; overflow: auto;">     
+		    <div style="max-height: calc(100vh - 220px); margin-top: 15px; overflow: auto;">     
             <table class="table table-striped">
               <thead>
                 <tr>
@@ -78,9 +79,17 @@
 				</div>
 				<button type="button" class="btn btn-primary btn-block" onclick='salvar()'>Salvar</button>
 				<button type="button" class="btn btn-default btn-block" onclick='cancelar()'>Cancelar</button>
-		  </div>
+      </div>
+
+      <footer style="bottom: 0; position:fixed; width:100%; height:50px; color: white; background-color: #222222;">
+          <a href="#" onclick="play()" id="play-button">play</a>
+          <h4>Tocar todas</h4>
+      </footer>
+      
+      <audio id="player" autoplay></audio>
+
     </body>
-	<script type="text/javascript" src="/socket.io/socket.io.js"></script>
+    <script src='/player_script' chartset='UTF-8'></script>
     <script src='/script' chartset='UTF-8'></script>
 	
 </html>
