--- a/view/index.html
+++ b/view/index.html
@@ -92,7 +92,7 @@
                 <img onclick="play()" id="play-button" src="/buttons/play" height="50px"></img>
               </td>
               <td>
-                <h5 id="song-title"style="max-height:30px; overflow-y: hidden;">Tocar todas</h5>
+                <h5 id="song-title"style="width: calc(100vw - 100px); max-height:30px; overflow: hidden;">Tocar todas</h5>
               </td>
               <td align = "right">
                 <img id="button-detalhes" src="/buttons/detalhes" onclick="controles()" style="margin-right: 10px;margin-left: 10px;"height="30px"></img>
