--- a/view/index.html
+++ b/view/index.html
@@ -105,7 +105,7 @@
       </div>
 
       <footer style="bottom: 0; position:fixed; width:100%; height:50px; color: white; background-color: #222222;">
-          <table style="width: 100%;">
+          <table id ="mini-player" style="width: 100%;">
             <tr>
               <td>
                 <img onclick="play()" id="play-button" src="/buttons/play" height="50px"></img>
@@ -114,7 +114,7 @@
                 <h5 id="song-title"style="width: calc(100vw - 100px); max-height:30px; overflow: hidden;">Tocar todas</h5>
               </td>
               <td align = "right">
-                <img id="button-detalhes" src="/buttons/detalhes" onclick="controles(true)" style="margin-right: 10px;margin-left: 10px;"height="30px"></img>
+                <img src="/buttons/detalhes" onclick="controles(true)" style="margin-right: 10px;margin-left: 10px;"height="30px"></img>
               </td>
             </tr>
           </table>          
