--- a/view/index.html
+++ b/view/index.html
@@ -115,6 +115,7 @@
               </tr>
             </table>
             <hr>
+			<input type="checkbox" id="all" checked>Tocar todas</input>
           </div>
           
         </div>
