--- a/view/index.html
+++ b/view/index.html
@@ -69,6 +69,7 @@
           </div>
         </div>
 		  <div class='container' id='update' style='display: none'>
+		  <div style="height:50px; width: 100%"></div>
 				<div class="form-group">
 					<label for="nome_arquivo">Nome:</label>
 					<input type="text" class="form-control" id="nome_arquivo">
@@ -106,7 +107,7 @@
                   <img id="prev" onclick="play_prev()" style="display: none;" src="/buttons/prev" height="30px"></img>
                 </td>
                 <td>
-                  <img id="stop" onclick="stop()" style="display:none" src="/buttons/stop" height="30px"></img>
+                  <img id="stop" onclick="Stop()" style="display:none" src="/buttons/stop" height="30px"></img>
                   <a href="#" id="atalho" onclick="Tocar_todas()">Tocar todas músicas</a>
                 </td>
                 <td align="right">
