--- a/view/index.html
+++ b/view/index.html
@@ -116,7 +116,8 @@
               </tr>
             </table>
             <hr>
-			<input type="checkbox" id="all" checked>Tocar todas</input>
+            <input type="checkbox" id="all" checked>Tocar todas</input>
+            <input type="checkbox" id="randomizer">Aleatório</input>
           </div>
           
         </div>
