--- a/view/index.html
+++ b/view/index.html
@@ -53,7 +53,7 @@
 				<input type='text' id='pesq' placeholder='Digite o nome do arquivo' class='form-control'  />
 				</form>
 			</div>
-		    <div style="max-height: calc(100vh - 230px); margin-top: 15px; margin-bottom:50px; overflow: auto;">     
+		    <div style="max-height: calc(100vh - 230px); margin-top: 15px; margin-bottom:50px; overflow-y: auto;">     
             <table class="table table-striped">
               <thead>
                 <tr>
