--- a/view/index.html
+++ b/view/index.html
@@ -116,6 +116,7 @@
             </table>
             <hr>
             <input type="checkbox" id="all" name="all">Tocar todas</input>
+            <input type="checkbox" id="randomizar" name="all">Aleatório</input>
           </div>
           
         </div>
