--- a/view/index.html
+++ b/view/index.html
@@ -69,7 +69,7 @@
           </div>
         </div>
 		  <div class='container' id='update' style='display: none'>
-				<div class="form-group">
+				<div class="form-group" style="margin-top: 30px;">
 					<label for="nome_arquivo">Nome:</label>
 					<input type="text" class="form-control" id="nome_arquivo">
 				</div>
