--- a/view/index.html
+++ b/view/index.html
@@ -11,7 +11,7 @@
     </head>
     <body>
       <div id="corpo">
-        <nav class="navbar navbar-inverse" style="position: fixed; width: 100%; z-index:1">
+        <nav class="navbar navbar-inverse" style="position: fixed; width: 100%; z-index:1; border-radius: 0;">
             <div class="container-fluid">
               <div class="navbar-header" id='navbar_head'>
                 <a class="navbar-brand" href="#" onclick="menu()">Menu</a>
@@ -83,7 +83,7 @@
       </div>
 
       <div id="detalhes" style="display: none;">
-        <nav class="navbar navbar-inverse">
+        <nav class="navbar navbar-inverse" style="border-radius: 0;">
           <div class="container-fluid">
             <div class="navbar-header" id='navbar_head'>
               <a class="navbar-brand" href="#">Detalhes</a>
