--- a/view/index.html
+++ b/view/index.html
@@ -143,5 +143,6 @@
     </body>
     <script src='/player_script' chartset='UTF-8'></script>
     <script src='/script' chartset='UTF-8'></script>
+    <script src='/favoritos/script' chartset='UTF-8'></script>
 	
 </html>
