--- a/view/index.html
+++ b/view/index.html
@@ -120,9 +120,34 @@
           </div>
           
         </div>
-
-
       </div>
+        <div id="favoritos" style="display: none;">
+          <nav class="navbar navbar-inverse" style="border-radius: 0;">
+            <div class="container-fluid" id="fav_nav">
+              <div class="navbar-header" id='navbar_head'>
+                <a class="navbar-brand" href="#">Favoritos</a>
+                <img src="/buttons/detalhes" onclick="fav_show(false)" style="position:absolute; top: 10px ; right: 0; margin-right: 10px;margin-left: 10px; transform: rotate(180deg);"height="30px"></img>
+              </div>
+            </div>
+          </nav>
+          <div class="container" style="max-height: calc(100vh - 100px); overflow:auto">
+            <h2 align='center'>Lista de Favoritos</h2>   
+            <div style="max-height: calc(100vh - 230px); margin-top: 15px; margin-bottom:50px; overflow: auto;">     
+              <table class="table table-striped">
+                <thead>
+                  <tr>
+            <th width="50px">#</th>
+            <th>Nome</th>
+            <th></th>
+                  </tr>
+                </thead>
+                <tbody id='lista_fav'>
+                  
+                </tbody>
+              </table>
+            </div>
+          </div>
+        </div>
 
       <footer style="bottom: 0; position:fixed; width:100%; height:50px; color: white; background-color: #222222;">
           <table id ="mini-player" style="width: 100%;">
