--- a/view/index.html
+++ b/view/index.html
@@ -132,13 +132,14 @@
           </nav>
           <div class="container" style="max-height: calc(100vh - 100px); overflow:auto">
             <h2 align='center'>Lista de Favoritos</h2>   
+            <a href="#" align='center' id="all_fav" onclick="Tocar_todas_fav()">Tocar todos favoritos</a>
             <div style="max-height: calc(100vh - 230px); margin-top: 15px; margin-bottom:50px; overflow: auto;">     
               <table class="table table-striped">
                 <thead>
                   <tr>
             <th width="50px">#</th>
             <th>Nome</th>
-            <th></th>
+            <th width="50px" align="rigth"></th>
                   </tr>
                 </thead>
                 <tbody id='lista_fav'>
@@ -159,10 +160,19 @@
                 <h5 id="song-title"style="width: calc(100vw - 100px); max-height:30px; overflow: hidden;">Programado por: Hermes Francisco</h5>
               </td>
               <td align = "right">
-                <img src="/buttons/detalhes" onclick="controles(true)" style="margin-right: 10px;margin-left: 10px;"height="30px"></img>
+                <img id= "show_detalhes" src="/buttons/detalhes" onclick="controles(true)" style="margin-right: 10px;margin-left: 10px;"height="30px"></img>
               </td>
             </tr>
-          </table>          
+          </table> 
+          <table id="fav_button" style="width: 100%;">
+              <tr>
+                <td></td>
+                <td align="center" onclick="fav_show(true)" width="70px">
+                  <img src="/buttons/fav_icon" style="margin-right: 10px; margin-top: 5px; margin-left: 10px;"height="20px"></img> Favoritos
+                </td>
+               
+              </tr>
+          </table>         
       </footer>
 
     </body>
