--- a/view/index.html
+++ b/view/index.html
@@ -157,7 +157,7 @@
                 <img onclick="play()" id="play-button" src="/buttons/play" height="50px"></img>
               </td>
               <td>
-                <h5 id="song-title"style="width: calc(100vw - 100px); max-height:30px; overflow: hidden;">Programado por: Hermes Francisco</h5>
+                <h5 id="song-title"style="width: calc(100vw - 100px); max-height:30px; overflow: hidden;">Programado por: Hermes Francisco. Data 05/10/2020</h5>
               </td>
               <td align = "right">
                 <img id= "show_detalhes" src="/buttons/detalhes" onclick="controles(true)" style="margin-right: 10px;margin-left: 10px;"height="30px"></img>
