--- a/view/index.html
+++ b/view/index.html
@@ -130,7 +130,7 @@
               </div>
             </div>
           </nav>
-          <div class="container" style="max-height: calc(100vh - 100px); overflow:auto">
+          <div class="container" style="max-height: calc(100vh - 100px); overflow:hidden">
             <h2 align='center'>Lista de Favoritos</h2>   
             <a href="#" id="all_fav" onclick="Tocar_todas_fav()"><h5 align='center'>Tocar todos favoritos</h5></a>
             <div style="max-height: calc(100vh - 230px); margin-top: 15px; margin-bottom:50px; overflow: auto;">     
